[package]
name = "messengerc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
prost = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
proto-definitions = { git = "https://github.com/bennekrouf/proto-definitions", branch = "main" }
serde = "1.0.210"

[build-dependencies]
tonic-build = "0.12.1"
